// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic rendering case snapshot 1`] = `
.c0 {
  padding: 4px;
  border-radius: 2px;
  margin: 0;
  background: none;
  line-height: 1.375;
  color: inherit;
  font-family: Consolas,monospace,sans-serif;
  font-size: 1em;
  font-weight: inherit;
  font-style: inherit;
  white-space: normal;
}

<code
  class="c0"
  style="color:orange;font-size:16px"
>
  Hello, world!
</code>
`;

exports[`basic rendering case snapshot with theme 1`] = `
.c0 {
  padding: 2px;
  border-radius: 3px;
  margin: 0 2px;
  background: hsla(210deg,13%,12%,0.05);
  line-height: 1.5;
  color: #d81848;
  font-family: Consolas,monospace,sans-serif;
  font-size: 1em;
  font-weight: inherit;
  font-style: inherit;
  white-space: normal;
}

<code
  class="c0"
  style="color:orange;font-size:16px"
>
  Hello, world!
</code>
`;
